--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.3",
-    "openai": "^4.27.0"
+    "openai": "^4.27.0",
+    "xlsx": "^0.18.5"
   }
 }
