--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
+    "csv-stringify": "^6.5.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "openai": "^4.27.0",
